# discord-fastapi

./: .env  README.md  main.py  middlewares.py  model.py  requirements.txt  sutil.py  users.py  utils.py  validators.py
libs/req_id/: Cargo.toml
libs/req_id/src/: lib.rs
libs/users_db/: Cargo.toml  users_db.pyi
libs/users_db/src/: basic_sql.rs  constants.rs  i_users.rs  init_sql.rs  lib.rs  sql_conf.rs  structs.rs  users_i.rs
libs/users_db/src/logic/: create_or_null.rs  discard_or_null.rs  get_or_null.rs  mod.rs  update_or_err.rs
routes/users/: __init__.py  create.py  deleter.py  modifier.py  reader.py
src/: middlewares.py  model.py  validators.py
src/middlewares/: __init__.py  app_mw.py  traceback_mw.py
src/utils/: __init__.py  endpoint.py  result.py
