[package]
name = "users_db"
version = "0.1.0"
edition = "2024"

[lib]
name = "users_db"
crate-type = [ "cdylib" ]


[dependencies]
pyo3 = { version = "0.24.1", features = [ "extension-module" ] }

# postgresql
#sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }

# sqlite
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }

sea-query = "0.32.7"

tokio = { version = "1", features = ["full" ] }
uuid = { version = "1.18.1", features = [ "v4" ] }
dotenvy = "0.15"

[package-metadata.maturin]
include-pyi = true

[profile-release]
target-cpu = "native"
codegen-units = 1
#panic = "abort"
opt-level = 3
lto = false
